<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark">

    <com.hyperionsoftware.balls.ui.RaceView
        android:id="@+id/raceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.hyperionsoftware.balls.ui.JoystickView
        android:id="@+id/joystickView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="bottom|start"
        android:layout_margin="28dp" />

    <ImageButton
        android:id="@+id/pauseButton"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_gravity="top|end"
        android:layout_margin="16dp"
        android:background="@drawable/bg_round_button"
        android:contentDescription="@string/pause_title"
        android:padding="12dp"
        android:src="@drawable/ic_pause" />

    <ImageButton
        android:id="@+id/boostButton"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="28dp"
        android:background="@drawable/bg_round_button_accent"
        android:contentDescription="@string/boost_button"
        android:padding="20dp"
        android:src="@drawable/ic_boost" />

    <ImageButton
        android:id="@+id/activeItemButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="116dp"
        android:background="@drawable/bg_round_button"
        android:contentDescription="@string/active_item_button"
        android:padding="16dp"
        android:src="@drawable/ic_active_item" />

</FrameLayout>
